--- a/index.css
+++ b/index.css
@@ -8,33 +8,36 @@
     height: 70px;
     border: 1px double #272932;
     border-radius: 25px;
-    padding-left: 2px;
 }
 .homestyle{
     border: 2px solid #272932;
     border-radius: 25px;
     margin-top: 30px;
     min-height: 280px;
+    padding-bottom: 20px;
 }
 .footerstyling{
     width: 100%;
    min-height: 90px;
     background-color: #272932;
-    border:20px;
     border-radius:20px;
 }
 .footerstyling > h1{
     color: white;
     text-align: center;
 }
+.footerstyling > h1 > a > svg{
+  color: white;
+  text-align: center;  
+}
 .socialmedia > a{
     color: white;
-    margin-left: 10px;
+    margin-left: 20px;
 }
 button{
-    margin-left: 100px;
+    margin-left: 80px;
     padding: 10px;
     background-color: #E7ECEF;
     border: 2px solid #272932;
-    border-radius: 10px;
+    border-radius: 5px;
 }
